---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: shadowing.md - Shadowing - Implicit class shadowing
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/shadowing.md
---

# Python source files

## mdtest_snippet.py

```
1 | class C: ...
2 | 
3 | C = 1  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Object of type `Literal[1]` is not assignable to `<class 'C'>`
 --> src/mdtest_snippet.py:3:1
  |
3 | C = 1  # error: [invalid-assignment]
  | -   ^ Incompatible value of type `Literal[1]`
  | |
  | Declared type `<class 'C'>`
  |
info: Implicit shadowing of class `C`, add an annotation to make it explicit if this is intentional

```
